--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>goit-react-hw-01-components</title>
+    <title>goit-react-hw-05-movies</title>
   </head>
   <body>
     <div id="app"></div>
